fix(app): add navigation z-index

--- a/app/scss/components/_nav.scss
+++ b/app/scss/components/_nav.scss
@@ -1,4 +1,5 @@
 .navbar {
+  z-index: 9999;
   &__container {
     position: sticky;
     top: 0;
